--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,8 +26,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="5dp"
-                android:layout_marginStart="15dp">
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="5dp">
 
                 <Button
                     android:id="@+id/btnGoToAddBalance"
@@ -36,6 +36,7 @@
                     android:layout_height="wrap_content"
                     android:text="Añadir saldo >"
                     android:textAllCaps="false"
+
                     android:textColor="@color/blueText"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -47,6 +48,7 @@
                     android:layout_marginTop="16dp"
                     android:fontFamily="@font/roboto_medium"
                     android:text="Balance actual"
+                    android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,6 +59,7 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="@font/roboto_medium"
                     android:text="$"
+                    android:textColor="@color/black"
                     android:textSize="20sp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/btnGoToAddBalance" />
