--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="greyText">#B2B3BF</color>
 
     <color name="primaryColorTheme">#8160CC</color>
+    <color name="secondaryColorTheme">#0E091B</color>
     <color name="blueText">#477CEE</color>
 
     <color name="card_background">#414651</color>
